# weather_gpx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: deploy.yml
src/: gpx_parse.rs  handlers.rs  main.rs  weather.rs  wind.rs
static/: app.css  index.html
